--- a/tainan_traffic.html
+++ b/tainan_traffic.html
@@ -14,6 +14,16 @@
 		width: 100%;
 		height: 800px;
 	}
+	h1 {
+		font-size: 32px;
+		font-weight: bold;
+		padding-bottom:30px;
+	}
+	p {
+		margin-top:10px;
+		padding:0px 0 50px;
+		font-size: 14px;
+	}
 </style>
 </head>
 
@@ -33,6 +43,7 @@ var chart = am4core.create("chartdiv", am4charts.ChordDiagram);
 
 chart.colors.saturation = 0.3;
 chart.colors.step = 3;
+
 var colors = {
     annan:chart.colors.next(),
     bei:chart.colors.next(),
